[gd_scene load_steps=6 format=2]

[ext_resource path="res://Recursos/Fuentes/CutiveMono-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Recursos/Temas/default.tres" type="Theme" id=2]
[ext_resource path="res://UiScene/Script/CreacionUsuario.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 47
outline_size = 5
outline_color = Color( 0.160784, 0.152941, 0.207843, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 5
outline_color = Color( 0.160784, 0.152941, 0.207843, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="CreacionUsuario" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.356863, 0.32549, 0.501961, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 720.0
margin_bottom = 1512.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 720.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "- Crear Jugador -"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 720.0
margin_bottom = 60.0

[node name="AtrasBoton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 150.0
margin_bottom = 124.0
rect_min_size = Vector2( 150, 60 )
size_flags_horizontal = 0
text = "Atr√°s"

[node name="NombreEditBox" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 720.0
margin_bottom = 731.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/NombreEditBox"]
margin_right = 720.0
margin_bottom = 603.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/NombreEditBox/VBoxContainer"]
margin_top = 241.0
margin_right = 720.0
margin_bottom = 297.0
custom_fonts/font = SubResource( 2 )
text = "Nombre de Jugador:"
align = 1

[node name="nombreEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/NombreEditBox/VBoxContainer"]
margin_left = 140.0
margin_top = 301.0
margin_right = 580.0
margin_bottom = 361.0
rect_min_size = Vector2( 440, 60 )
size_flags_horizontal = 4
align = 1
max_length = 16
context_menu_enabled = false
clear_button_enabled = true
placeholder_text = "Nombre"

[node name="PuntajeEditBox" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 735.0
margin_right = 720.0
margin_bottom = 1338.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PuntajeEditBox"]
margin_right = 720.0
margin_bottom = 603.0
alignment = 1

[node name="Puntaje" type="Label" parent="MarginContainer/VBoxContainer/PuntajeEditBox/VBoxContainer"]
margin_top = 241.0
margin_right = 720.0
margin_bottom = 297.0
custom_fonts/font = SubResource( 2 )
text = "Puntaje Inicial:"
align = 1

[node name="puntajeEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/PuntajeEditBox/VBoxContainer"]
margin_left = 140.0
margin_top = 301.0
margin_right = 580.0
margin_bottom = 361.0
rect_min_size = Vector2( 440, 60 )
size_flags_horizontal = 4
text = "0"
align = 1
max_length = 16
context_menu_enabled = false
clear_button_enabled = true
placeholder_text = "Nombre"

[node name="Margen BotonCrear" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 1342.0
margin_right = 720.0
margin_bottom = 1512.0
size_flags_horizontal = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 50

[node name="crearBoton" type="Button" parent="MarginContainer/VBoxContainer/Margen BotonCrear"]
margin_left = 20.0
margin_top = 20.0
margin_right = 700.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 100 )
text = "Crear"

[connection signal="pressed" from="MarginContainer/VBoxContainer/AtrasBoton" to="." method="_on_AtrasBoton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Margen BotonCrear/crearBoton" to="." method="_on_crearBoton_pressed"]
